added the ability to upload audio files

--- a/app/views/audios/_form.html.erb
+++ b/app/views/audios/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :audio_url %><br>
-    <%= f.text_field :audio_url %>
+    <%= f.file_field :audio %>
   </div>
   <div class="field">
     <%= f.label :name %><br>
