--- a/app/views/audios/show.html.erb
+++ b/app/views/audios/show.html.erb
@@ -6,11 +6,6 @@
 </p>
 
 <p>
-  <strong>Audio url:</strong>
-  <%= @audio.audio_url %>
-</p>
-
-<p>
   <strong>Name:</strong>
   <%= @audio.name %>
 </p>
@@ -32,3 +27,11 @@
 
 <%= link_to 'Edit', edit_audio_path(@audio) %> |
 <%= link_to 'Back', audios_path %>
+
+
+
+
+
+  <audio id="<%= @audio.id %>" controls>
+    <source src="<%= stream_path(@audio.id) %>"></source>
+  </audio> 
