--- a/app/views/interests/index.html.erb
+++ b/app/views/interests/index.html.erb
@@ -5,10 +5,9 @@
 <table>
   <thead>
     <tr>
+      <th>ID</th>
       <th>Name</th>
-      <th>String,</th>
       <th>Imageurl</th>
-      <th>String</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +15,7 @@
   <tbody>
     <% @interests.each do |interest| %>
       <tr>
+        <td><%= interest.id %></td>
         <td><%= interest.name %></td>
         <td><%= interest.imageURL %></td>
         <td><%= link_to 'Show', interest %></td>
